added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Updating-Production-Models.ipynb
@@ -208,7 +208,186 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = smrt.invoke_endpoint(EndpointName=endpoint_name,\n",
+    "                                  ContentType=\"text/csv\",\n",
+    "                                 Body=test_string)\n",
+    "rbody = StreamingBody(raw_stream=result['Body'],content_length=int(result['ResponseMetadata']['HTTPHeaders']['content-length']))\n",
+    "\n",
+    "print(f\"Result from {result['InvokedProductionVariant']} = {rbody.read().decode('utf-8')}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The output from the endpoint should look similar to the following:\n",
+    "Result from VariantA = 0.17167794704437256\n",
+    "\n",
+    "Result from VariantB = 0.14226064085960388\n",
+    "\n",
+    "Result from VariantA = 0.10094326734542847\n",
+    "\n",
+    "Result from VariantA = 0.17167794704437256\n",
+    "\n",
+    "Result from VariantB = 0.050961822271347046\n",
+    "\n",
+    "Result from VariantB = -0.2118145227432251\n",
+    "\n",
+    "Result from VariantB = 0.16735368967056274\n",
+    "\n",
+    "Result from VariantA = 0.17314249277114868\n",
+    "\n",
+    "Result from VariantB = 0.16769883036613464\n",
+    "\n",
+    "Result from VariantA = 0.17314249277114868"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### You can collect and examine results from VariantB. You can explore the CloudWatch metrics for VariantB even further as well, as explained in the Basic concepts of Amazon SageMaker Endpoint Production Variants section. Once you are happy with the performance of VariantB, gradually shift the balance toward the new model (40/60, 20/80) until your new model is processing all the live traffic. The following code block shows how to route 60% of live traffic to VariantB:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Update the product variant weight to route 60% of traffic to VariantB\n",
+    "sm.update_endpoint_weights_and_capacities(\n",
+    "           EndpointName=endpoint_name,\n",
+    "           DesiredWeightsAndCapacities=[\n",
+    "          {\"DesiredWeight\": 4, \"VariantName\": variantA[\"VariantName\"]},\n",
+    "          {\"DesiredWeight\": 6, \"VariantName\": variantB[\"VariantName\"]},\n",
+    "          ],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Alternatively, you can choose to update the endpoint to route all live traffic to VariantB in a single step, as shown in the following code block:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Update the endpoint to point to VariantB\n",
+    "endpoint_config_new =f\"abtest-b-config-{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    "smsession.create_endpoint_config_from_existing (\n",
+    "            existing_config_name=endpoint_name,\n",
+    "            new_config_name=endpoint_config_new,\n",
+    "            new_production_variants=[variantB]\n",
+    ")\n",
+    "\n",
+    "##Update the endpoint\n",
+    "smsession.update_endpoint(endpoint_name=endpoint_name, endpoint_config_name=endpoint_config_new, wait=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Since the new model is evaluated in production with an increased percentage of live traffic on the new infrastructure, the risk of the model becoming unavailable to the model consumer during the update, or the model quality being worse than it was in the previous version, is reduced. This addresses the typical deployment issue of the model worked perfectly in the dev/QA environment, so I'm not sure why it is failing in production. However, since two Production Variants are active for a certain period, the cost increases as you are paying for two sets of infrastructure resources.\n",
+    "\n",
+    "#### A relatively recent type of A/B testing that's gaining popularity is Multi-Arm Bandits (MAB). MAB is a machine learning-based approach that learns from the data that's collected during testing. Using a combination of exploration and exploitation, MAB dynamically shifts traffic to better-performing model variants much sooner than a traditional A/B test.\n",
+    "\n",
+    "#### Refer to https://aws.amazon.com/blogs/machine-learning/power-contextual-bandits-using-continual-learning-with-amazon-sagemaker-rl/ to learn how to use Amazon SageMaker RL to implement MAB to recommend personalized content to users.\n",
+    "\n",
+    "#### While the A/B strategy is helpful with experimentation and exploration, what about releasing major changes to your models? Is there a way to reduce the risk further? Blue/Green deployments can help with this.\n",
+    "\n",
+    "## Blue/Green deployment\n",
+    "\n",
+    "#### The Blue/Green deployment strategy involves two identical production environments, one containing the current model and another containing the next version of the model that you want to update to. While one environment, say Blue, is serving live traffic, the next version of the model is tested in the Green environment. While model testing is happening in production, only test or synthetic data is used. The new model version should be tested against functional, business, and traffic load requirements.\n",
+    "\n",
+    "#### Once you are satisfied with the test results over a certain period, update the live endpoint with the new (Green) endpoint configuration. Validate the tests again with the Green endpoint configuration using live inference traffic. If you find any issues during this testing period, route the traffic back to a Blue endpoint configuration. After a while, if there are no issues with the new model, go ahead and delete the Blue endpoint configuration.\n",
+    "\n",
+    "#### The advantage of this approach is that before serving live traffic, the new model is evaluated in the production environment. Both the model itself and the infrastructure hosting the model are evaluated and thereby risk is reduced. However, since two identical production environments are active for a while, the cost of this option could double compared to the strategies we've discussed so far. This option also loses the advantage of SageMaker managing the routing logic.\n",
+    "\n",
+    "## Canary deployment\n",
+    "\n",
+    "#### In a Canary deployment, the setup is very similar to Blue/Green deployments, with two different production environments hosting the old and new models. However, instead of using synthetic test data with a new model, you use a portion of the live traffic. Initially, a small portion of the inference traffic from the model consumer will be served by the new model. The rest of the inference requests continue to use the previous version. During the testing phase, the designated set of users using the new model should remain the same, and this requires stickiness. When you are satisfied with the new model, gradually increase the percentage of requests that are sent to the new model, until all live traffic is served by the new model. Finally, the old model can be deleted.\n",
+    "\n",
+    "#### As with the Blue/Green deployments, the advantage of this approach is that risk to the model consumers is reduced as the new model is tested in the production environment. Additionally, the model is gradually exposed to live traffic instead of a sudden switch. But this strategy does require you to manage the logic of gradually increasing traffic for the new model. Additionally, since two identical production environments are active for a certain period, the cost of this option is also significantly higher.\n",
+    "\n",
+    "## Shadow deployment\n",
+    "\n",
+    "#### In a Shadow deployment, the setup is, once again, very similar to a Canary deployment in that two different production environments are hosting the old and new models, and inference traffic is sent to both. However, only responses from the old model are sent back to the model consumer.\n",
+    "\n",
+    "#### The traffic that's sent to the old model is collected and also sent to the new model, either immediately or after a delay. While the production traffic is sent to the new model as well as the old, the output from the new model is only captured and stored for analysis, not sent to model consumers. The new model should be tested against functional, business, and traffic load with the live traffic.\n",
+    "\n",
+    "#### As with the Canary deployments, the advantage of this approach is that all risks to the model consumers are reduced as the new model is tested in the production environment.\n",
+    "\n",
+    "## Selecting an appropriate deployment strategy\n",
+    "\n",
+    "#### As you have seen so far, the initial deployment of a machine model is only one step of making it available to consumers. New versions of models are built regularly. Before making the new models available to the consumers, the model quality and infrastructure that's needed to host the model should be evaluated carefully. There are multiple factors to consider when selecting the deployment strategy to initially deploy and continue to update models. For example, not all models can be tested in production due to budget and resource constraints. Similarly, some model consumers can tolerate the model being unavailable for certain periods.\n",
+    "\n",
+    "## Selecting a standard deployment\n",
+    "#### Model consumers are not business or revenue critical and are risk-tolerant. For example, a company's internal employee attrition prediction models are not time-critical and can be re-executed on errors:\n",
+    "\n",
+    "### Pros:\n",
+    "- Easy To Implement\n",
+    "- Cost Effective since only one endpoint and one production variant are active at any given time\n",
+    "- Zero downtime since switching between old and new models is managed by Sagemaker\n",
+    "- Rollback is managed by Sagemaker\n",
+    "\n",
+    "### Cons\n",
+    "- High risk to the model consumer with the possibility of incorrect predictions, since neither the model nor the housing infrastructure configuration is evaluated in the production environment\n",
+    "\n",
+    "## Selecting an A/B deployment\n",
+    "#### You should use A/B deployments to explore the effect different sets of hyperparameters have on model quality, new or different slices of the training dataset, and different feature engineering techniques:\n",
+    "\n",
+    "### Pros:\n",
+    "- Easy To Implement\n",
+    "- Zero downtime since switching between old and new models is managed by saagmaker\n",
+    "- Reduced risk to model consumers since the new model is tested in production\n",
+    "- New Models managed by Sagemaker\n",
+    "- Rollback is managed by Sagemaker\n",
+    "\n",
+    "### Cons\n",
+    "- Increase costs since multiple production variants are active at the same time\n",
+    "\n",
+    "## Selecting a Blue/Green deployment\n",
+    "\n",
+    "#### You should use this deployment with mission-critical model consumers, such as e-commerce applications, that are sensitive to model downtime:\n",
+    "\n",
+    "### Pros:\n",
+    "- Reducded risk because of testing in prod prior to serving live traffic\n",
+    "- Switch between envs because of Sagemaker makes it easy for rollbacks\n",
+    "\n",
+    "\n",
+    "### Cons\n",
+    "- Increase costs since multiple envs are active at the same time\n",
+    "- Testing does not happend with live traffic\n",
+    "- Switching between inference traffic between old and new models is not gradual leading to possible wide scale outages\n",
+    "\n",
+    "## Selecting a Canary deployment\n",
+    "#### You should use this deployment with mission-critical model consumers, such as financial services models, that are not risk-tolerant:\n",
+    "\n",
+    "### Pros:\n",
+    "- Reducded risk due to gradual shift of inference requests to new models\n",
+    "\n",
+    "### Cons\n",
+    "- Increase costs since multiple envs are active at the same time and multiple endpoints\n",
+    "\n",
+    "## Selecting a Shadow deployment\n",
+    "#### You should use this deployment with mission-critical model consumers, such as financial services models, that are not risk-tolerant:\n",
+    "\n",
+    "### Pros:\n",
+    "- Reducded risk because new model is analyzed and evaluated with live traffic before it is made available to model consumers\n",
+    "\n",
+    "### Cons:\n",
+    "- Increase costs since multiple envs are active at the same time and multiple endpoints\n",
+    "\n",
+    "#### You should choose an appropriate model strategy using the trade-offs discussed in the preceding subsections for ease of implementation, acceptable model downtime, the risk tolerance of the consumers, and the costs that must be taken into account for you to meet your needs."
+   ]
   },
   {
    "cell_type": "markdown",
