added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Optimizing-Model-Hosting-Costs.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Optimizing-Model-Hosting-Costs.ipynb
@@ -43,6 +43,44 @@
     "transformer.transform(data=batch_input, data_type='S3Prefix',\n",
     "content_type=content_type, split_type='Line')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Real-time inference\n",
+    "\n",
+    "#### When you deploy a SageMaker model to a real-time inference endpoint, SageMaker deploys the model artifact and your inference code (packaged in a Docker image) to one or more inference instances. You now have a live API endpoint for inference, and you can invoke it from other software services on demand.  \n",
+    "\n",
+    "#### You pay for the inference endpoints (instances) as long as they are running. Use real-time inference in the following situations:\n",
+    "\n",
+    "- The inferences are dependent on context. For example, if you want to recommend a video to watch, the inference may depend on the show your user just finished. If you have a large video catalog, you can't generate all the possible permutations of recommendations in advance.  \n",
+    "- You may need to provide inferences for new events. For example, if you are trying to classify a credit card transaction as fraudulent or not, you need to wait until your user actually attempts a transaction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.deserializers import JSONDeserializer\n",
+    "from sagemaker.serializers import CSVSerializer\n",
+    "\n",
+    "predictor = estimator.deploy(initial_instance_count=1,\n",
+    "                            instance_type='ml.m5.2xlarge',\n",
+    "                            serializer=CSVSerializer(),\n",
+    "                            deserializer=JSONDeserializer()\n",
+    "                             )\n",
+    "\n",
+    "result = predictor.predict(csv_payload)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
