added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Monitoring-Models-In-Prod.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Monitoring-Models-In-Prod.ipynb
@@ -37,7 +37,9 @@
     "\n",
     "## Data drift monitoring\n",
     "\n",
-    "#### You monitor a production model for data drift to ensure that the distribution of the live inference traffic the deployed model is serving does not drift away from the distribution of the dataset used for training the model.\n"
+    "#### You monitor a production model for data drift to ensure that the distribution of the live inference traffic the deployed model is serving does not drift away from the distribution of the dataset used for training the model.\n",
+    "\n",
+    "#### Enable data capture for the deployed endpoint: The first step is to deploy a SageMaker endpoint with data capture enabled. As you can see from the following sample code, configuring data capture includes specifying the percentage of inference traffic to capture and the S3 location to save the captured traffic:"
    ]
   },
   {
@@ -45,7 +47,150 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sagemaker.model_monitor import DataCaptureConfig\n",
+    "data_capture_config = DataCaptureConfig(\n",
+    "enable_capture=True,\n",
+    "sampling_percentage=100,  destination_s3_uri=s3_capture_upload_path\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### To deploy the model, create the endpoint by passing in the data capture configuration as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = model.deploy(initial_instance_count=1,\n",
+    "                instance_type='ml.m4.xlarge',\n",
+    "                endpoint_name=endpoint_name,\n",
+    "               data_capture_config = data_capture_config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The following code shows a sample of the data captured. As you can see, both the request to and response from the endpoint along with event metadata are captured:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "{\n",
+    "\"captureData\": {\n",
+    "    \"endpointInput\": {\n",
+    "      \"observedContentType\": \"text/csv\",\n",
+    "      \"mode\": \"INPUT\",\n",
+    "     \"data\": \"0,2020,12,4,31,0,19.0,0.0,6.0,0.0,0.0,0.0,0.0,0.0,0.0,1.0\\n\",\n",
+    "      \"encoding\": \"CSV\"\n",
+    "    },\n",
+    "    \"endpointOutput\": {\n",
+    "      \"observedContentType\": \"text/csv; charset=utf-8\",\n",
+    "      \"mode\": \"OUTPUT\",\n",
+    "      \"data\": \"-4.902510643005371\",\n",
+    "      \"encoding\": \"CSV\"\n",
+    "    }\n",
+    "  },\n",
+    "  \"eventMetadata\": {\n",
+    "    \"eventId\": \"e68592ca-948c-44dd-a764-608934e49534\",\n",
+    "\n",
+    "    \"inferenceTime\": \"2021-06-28T18:41:16Z\"\n",
+    "  },\n",
+    "  \"eventVersion\": \"0\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate baseline: The second step is to configure and execute a data baseline job. This baseline job uses SageMaker Processing to analyze the training data at scale. For data drift monitoring, use DefaultModelMonitor to configure the infrastructure to execute the processing job on and the maximum runtime. Sample code is shown as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.model_monitor import DefaultModelMonitor\n",
+    "from sagemaker.model_monitor.dataset_format import DatasetFormat\n",
+    "\n",
+    "my_default_monitor = DefaultModelMonitor(\n",
+    "    role=role,\n",
+    "    instance_count=1,\n",
+    "    instance_type=\"ml.m5.xlarge\",\n",
+    "    volume_size_in_gb=20,\n",
+    "    max_runtime_in_seconds=3600,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use the suggest_baseline method on DefaultModelMonitor to configure and kick off the baseline job. To configure the baseline job, specify where the baseline data is and where you want the baseline results to be saved in S3, as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_default_monitor.suggest_baseline(\n",
+    "    baseline_dataset=baseline_data_uri + \"/training-dataset-with-header.csv\",\n",
+    "    dataset_format=DatasetFormat.csv(header=True),\n",
+    "    output_s3_uri=baseline_results_uri,\n",
+    "    wait=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The generated constraints also suggest completeness for each feature, which represents the percentage of values that can be non-null in the inference traffic. In this example, since completeness for all features is at 1.0, there cannot be any null values of these features in the inference traffic. Additionally, as suggested by num_constraints.is_non_negative, none of the integral and fractional features can be null.\n",
+    "\n",
+    "#### Schedule and execute a data drift monitoring job: The third step is to configure and schedule a data drift monitoring job. To configure the data drift monitoring job, specify the endpoint to monitor, the location to store the monitoring results, the baseline statistics and constraints, and the schedule to execute the job on. The following sample code configures a monitoring job to be executed every hour:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_default_monitor.create_monitoring_schedule(\n",
+    "    monitor_schedule_name=mon_schedule_name,\n",
+    "    endpoint_input=predictor.endpoint,\n",
+    "    output_s3_uri=s3_report_path,\n",
+    "    statistics=my_default_monitor.baseline_statistics(),\n",
+    "    constraints=my_default_monitor.suggested_constraints(),\n",
+    "    schedule_cron_expression=CronExpressionGenerator.hourly(),\n",
+    "    enable_cloudwatch_metrics=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The monitoring job emits CloudWatch metrics for all features included in the training data. Common metrics generated for all features are Completeness and BaselineDrift. The Completeness metric indicates the percentage of values that can be null for a given feature in a specific interval. The BaselineDrift metric indicates how much a feature has drifted in a specific interval from the baseline. Additionally, for numerical features, a few other metrics emitted are Max, Min, Sum, SampleCount, and AverageCount, as observed during the interval.\n",
+    "\n",
+    "#### For any of these metrics, you can configure a CloudWatch alert to be triggered based on threshold values suggested in the constraints file. If the feature values in the inference traffic observed during a given interval violate the threshold values, an alert is raised."
+   ]
   }
  ],
  "metadata": {
