added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Monitoring-Models-In-Prod.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Mange-Monitor-Models/Monitoring-Models-In-Prod.ipynb
@@ -189,7 +189,12 @@
    "source": [
     "#### The monitoring job emits CloudWatch metrics for all features included in the training data. Common metrics generated for all features are Completeness and BaselineDrift. The Completeness metric indicates the percentage of values that can be null for a given feature in a specific interval. The BaselineDrift metric indicates how much a feature has drifted in a specific interval from the baseline. Additionally, for numerical features, a few other metrics emitted are Max, Min, Sum, SampleCount, and AverageCount, as observed during the interval.\n",
     "\n",
-    "#### For any of these metrics, you can configure a CloudWatch alert to be triggered based on threshold values suggested in the constraints file. If the feature values in the inference traffic observed during a given interval violate the threshold values, an alert is raised."
+    "#### For any of these metrics, you can configure a CloudWatch alert to be triggered based on threshold values suggested in the constraints file. If the feature values in the inference traffic observed during a given interval violate the threshold values, an alert is raised.\n",
+    "\n",
+    "#### Analyze and act on results: The final step is to analyze and act on the monitoring results. As mentioned in the high-level monitoring steps discussion earlier, you can download the monitoring reports from S3 and analyze them in your notebook environment or use Studio to view the monitoring details. For example, downloading the violation report to a notebook environment and viewing the report contents shows.\n",
+    "\n",
+    "#### You can decide what actions you want to take on these alerts according to your business and operational requirements. You can automate actions such as updating the model, updating your training data, and retraining and updating the model as a response to the CloudWatch alert triggered.\n",
+    "\n"
    ]
   }
  ],
